(player) wrapped volume icon in a div to prevent width changes

--- a/src/styles/Player.module.scss
+++ b/src/styles/Player.module.scss
@@ -86,6 +86,9 @@
 
 .volumeControls {
     position: relative;
+    .iconWrapper {
+        width: 36px;
+    }
     .volume {
         position: relative;
         transition: transform 0.3s ease;
